--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -1980,7 +1980,10 @@ body {
     }
     main {
       .chatbot {
-        display: none;
+        right: 40px;
+        img {
+          width: 80%;
+        }
       }
       section.profile-section {
         .container {
@@ -2547,7 +2550,10 @@ body {
     }
     main {
       .chatbot {
-        display: none;
+        right: 20px;
+        img {
+          width: 60%;
+        }
       }
       section.profile-section {
         .container {
