making space between author and date

--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -445,6 +445,7 @@ body {
                 font-family: $dejavu;
                 font-size: 18px;
                 color: $darkBlue;
+                margin-right: 40px;
               }
               .date {
                 font-family: $venuri;
