--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -323,10 +323,14 @@ body {
                   }
                 }
               }
-              span {
+              a:link,
+              a:visited {
+                color: inherit;
+                text-decoration: none;
                 font-family: $venuri;
                 font-size: 24px;
-                margin-right: 15px;
+
+                padding: 3px 7.5px 0 7.5px;
                 text-transform: uppercase;
               }
               .cont {
@@ -334,6 +338,16 @@ body {
               }
               .desktop-alphabet {
                 margin-bottom: 10px;
+
+                .letters {
+                  a {
+                    cursor: pointer;
+                  }
+
+                  a:hover {
+                    background-color: $tagsyellow;
+                  }
+                }
               }
             }
             .right-search {
@@ -2228,12 +2242,15 @@ body {
                     .swiper-wrapper {
                       width: 90%;
                       .swiper-slide {
-                        margin-right: 0px;
+                        padding: 5px 0 2px 0;
+
                         text-align: center;
                         font-size: 18px;
                         line-height: 20px;
-                        display: flex;
                         align-items: center;
+                      }
+                      .swiper-slide:hover {
+                        background-color: $tagsyellow;
                       }
                     }
                   }
