--- a/src/css/global.css
+++ b/src/css/global.css
@@ -564,10 +564,13 @@ body main section.bank-section .container .alphabets-search .double .left-alphab
 body main section.bank-section .container .alphabets-search .double .left-alphabet .ge-alphabet .collect-letters::-webkit-scrollbar {
   display: none;
 }
-body main section.bank-section .container .alphabets-search .double .left-alphabet span {
+body main section.bank-section .container .alphabets-search .double .left-alphabet a:link,
+body main section.bank-section .container .alphabets-search .double .left-alphabet a:visited {
+  color: inherit;
+  text-decoration: none;
   font-family: "BPGVenuri2010";
   font-size: 24px;
-  margin-right: 15px;
+  padding: 3px 7.5px 0 7.5px;
   text-transform: uppercase;
 }
 body main section.bank-section .container .alphabets-search .double .left-alphabet .cont {
@@ -575,6 +578,12 @@ body main section.bank-section .container .alphabets-search .double .left-alphab
 }
 body main section.bank-section .container .alphabets-search .double .left-alphabet .desktop-alphabet {
   margin-bottom: 10px;
+}
+body main section.bank-section .container .alphabets-search .double .left-alphabet .desktop-alphabet .letters a {
+  cursor: pointer;
+}
+body main section.bank-section .container .alphabets-search .double .left-alphabet .desktop-alphabet .letters a:hover {
+  background-color: #eed370;
 }
 body main section.bank-section .container .alphabets-search .double .right-search {
   display: -webkit-box;
@@ -2958,16 +2967,17 @@ body main section.bank-section .container .alphabets-search .double .left-alphab
   }
   body main section.bank-section .container .alphabets-search .double .left-alphabet .cont .mySwiper .swiper-wrapper .swiper-slide,
 body main section.bank-section .container .alphabets-search .double .left-alphabet .cont .mySwiper2 .swiper-wrapper .swiper-slide {
-    margin-right: 0px;
+    padding: 5px 0 2px 0;
     text-align: center;
     font-size: 18px;
     line-height: 20px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+  body main section.bank-section .container .alphabets-search .double .left-alphabet .cont .mySwiper .swiper-wrapper .swiper-slide:hover,
+body main section.bank-section .container .alphabets-search .double .left-alphabet .cont .mySwiper2 .swiper-wrapper .swiper-slide:hover {
+    background-color: #eed370;
   }
   body main section.bank-section .container .alphabets-search .double .right-search {
     margin-top: 10px;
