--- a/src/css/global.css
+++ b/src/css/global.css
@@ -2969,12 +2969,24 @@ body footer .container .tablet-responsive {
   }
   body main section.bank-section .container .alphabets-search .double .left-alphabet .ge-alphabet img {
     display: block;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+  }
+  body main section.bank-section .container .alphabets-search .double .left-alphabet .ge-alphabet img:hover {
+    -webkit-transform: scale(2);
+            transform: scale(2);
   }
   body main section.bank-section .container .alphabets-search .double .left-alphabet .ge-alphabet .collect-letters {
     width: 100%;
   }
   body main section.bank-section .container .alphabets-search .double .left-alphabet .en-alphabet img {
     display: block;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+  }
+  body main section.bank-section .container .alphabets-search .double .left-alphabet .en-alphabet img:hover {
+    -webkit-transform: scale(2);
+            transform: scale(2);
   }
   body main section.bank-section .container .alphabets-search .double .left-alphabet .desktop-alphabet {
     display: none;
