--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -2247,6 +2247,7 @@ body {
                   img {
                     display: block;
                     transition: all 0.3s;
+                    cursor: pointer;
                   }
 
                   img:hover {
@@ -2260,6 +2261,7 @@ body {
                   img {
                     display: block;
                     transition: all 0.3s;
+                    cursor: pointer;
                   }
 
                   img:hover {
