--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -37,6 +37,15 @@
         color: $tagsyellow;
       }
     }
+    @media (max-width: 1450px) {
+      width: 80%;
+    }
+    @media (max-width: 1325px) {
+      width: 90%;
+    }
+    @media (max-width: 1200px) {
+      width: 100%;
+    }
   }
 }
 .logo {
