--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -302,6 +302,7 @@ body {
             div {
               margin-right: 15px;
               padding: 5px 20px;
+              margin-top: 8px;
               background-color: $btnGray;
               cursor: pointer;
 
@@ -393,15 +394,19 @@ body {
               border-radius: 10px;
               border: 1px solid $btnGray;
               background-color: $white;
-              input {
+              form {
                 width: 100%;
-                height: 50px;
-                border: none;
-                margin-right: 5px;
-                &:focus-visible {
-                  outline: none;
+                input {
+                  width: 100%;
+                  height: 50px;
+                  border: none;
+                  margin-right: 5px;
+                  &:focus-visible {
+                    outline: none;
+                  }
                 }
               }
+
               img {
                 margin: 12px 5px 12px 15px;
               }
