--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,5 +1,5 @@
-@import './reset';
-@import './fonts';
-@import './variables';
-@import './mixins';
-@import './style';
+@import "./reset";
+@import "./fonts";
+@import "./variables";
+@import "./mixins";
+@import "./style";
