fixing rotating text

--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -1748,7 +1748,7 @@ body {
     section.definition-offer {
       .container {
         padding: 80px 0;
-        .definition-header {
+        .definition-header-1 {
           .definition-title {
             padding-bottom: 5px;
             margin-bottom: 18px;
