--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -2136,6 +2136,7 @@ body {
     }
     main {
       .chatbot {
+        display: none;
         right: 40px;
         img {
           width: 80%;
@@ -2723,6 +2724,7 @@ body {
     }
     main {
       .chatbot {
+        display: none;
         right: 20px;
         img {
           width: 60%;
